--- a/.env.sample
+++ b/.env.sample
@@ -16,13 +16,6 @@ MYSQL_USER=user
 MYSQL_PASSWORD=user
 MYSQL_PORT=33060
 
-# Redis configuration. By default, it connects by making use of a UNIX socket.
-# It's possible to connect directly to the host (TCP) by using "redis" as host, and 6379 as port.
-REDIS_HOST=redis
-REDIS_PORT=6379
-
-
-RABBITMQ_DEFAULT_VHOST=xdebug-host
-
+# Ports
 HTTP_PORT=8083
 PHP_ADMIN_PORT=8082
